Use CSS grid for caption Setting overlay to avoid cutoff

--- a/src/css/components/_captions-settings.scss
+++ b/src/css/components/_captions-settings.scss
@@ -2,23 +2,32 @@
   background-color: $primary-background-color;
   background-color: rgba($primary-background-color, 0.75);
   color: $primary-foreground-color;
-  height: 70%;
+  height: 100%;
 }
 
 // Layout divs
 .vjs-text-track-settings .vjs-modal-dialog-content {
-  display: table;
+  display: grid;
+  grid-template-columns: minmax(230px, 400px) 230px 400px;
+  grid-template-rows: minmax(180px, 330px) 180px 330px;
+
 }
 
-.vjs-text-track-settings .vjs-track-settings-colors,
-.vjs-text-track-settings .vjs-track-settings-font,
-.vjs-text-track-settings .vjs-track-settings-controls {
-  display: table-cell;
+.vjs-text-track-settings .vjs-track-settings-colors
+ {
+  display: block;
+  grid-column: 1;
+  grid-row: 1;
 }
 
+.vjs-text-track-settings .vjs-track-settings-font
+{
+  grid-column: 2;
+  grid-row: 1;
+}
 .vjs-text-track-settings .vjs-track-settings-controls {
-  text-align: right;
-  vertical-align: bottom;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 // Form elements
